--- a/src/App.css
+++ b/src/App.css
@@ -1,118 +1,42 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-@font-face {
-  font-family: Romanica;
-  src: url(https://brunofranciscu.github.io/maximasestoicas/Romanica.woff);
-}
-
-main {
-  background: #f5f5f5;
-  height: 100%;
-  width: 100%;
-}
-
-section {
-  max-width: 892%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
-  height: 227px;
-}
-
-h1 {
-  font-family: Romanica;
-  font-weight: 100;
-  color: #999;
-  font-size: 40px;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-  align-items: center;
-  width: 100%;
-  padding: 0;
 }
 
-h1:before {
-  content: '"';
-  font-size: 250px;
-  position: absolute;
-  bottom: 25%;
-  left: 50%;
-  translate: -50% 0;
-  color: #ddd;
-  font-family: "Times New Roman", Times, serif;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-em {
-  text-align: center;
-  font-size: 15px;
-  letter-spacing: 1px;
-  position: absolute;
-  left: 50%;
-  translate: -50% 0;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
   color: #888;
-  font-family: Arial;
-  margin-top: 20px;
-}
-
-h1.loading:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  translate: -50% 80px;
-  color: #ddd;
-}
-
-@keyframes traduzir {
-  0% {
-    content: "Carregando";
-  }
-
-  25% {
-    content: "Carregando.";
-  }
-
-  50% {
-    content: "Carregando..";
-  }
-
-  100% {
-    content: "Traduzindo...";
-  }
-}
-
-@media screen and (max-width: 769px) {
-  h1 {
-    font-size: 20px;
-    line-height: 1.5;
-  }
-
-  section {
-    width: 100%;
-    padding: 20px;
-  }
-}
-
-.loader {
-  background: linear-gradient(to left, #f5f5f5 0%, #e8e8e8 95%, #f5f5f5 100%);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  inset: 0;
-  animation: load 0.8s infinite ease-out;
-  background-repeat: repeat-x;
-  transition: all 0.8s;
-}
-
-@keyframes load {
-  0% {
-    background-position-x: -0px;
-  }
-
-  100% {
-    background-position-x: 1000px;
-  }
 }
