--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,8 @@
     from{ opacity: .2}
     to{ opacity: 1}
 }
+
+.salvos::-webkit-scrollbar { @apply w-2 }
+.salvos::-webkit-scrollbar-track { @apply bg-transparent }
+.salvos::-webkit-scrollbar-thumb { @apply bg-[#00000044] }
+
